Fix broken master node name deduction

--- a/examples/simulation3-empty/README
+++ b/examples/simulation3-empty/README
@@ -1,1 +1,3 @@
 this simulatoin is used to benchmark the raw simulation runtime.... calculation is not done!
+
+to run on juwesl you can submit the as-batch.sh script.
